# coderunner

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.claude  Dockerfile.litebox-claude  MCP_BRIDGE_GUIDE.md  NPX_BRIDGE_SUMMARY.md  OpenCode.md  README.md  README_API.md  THIRD_PARTY_NOTICES.md  __init__.py  cleanup.sh  config.py  container_manager.py  docker-compose.litebox-claude.yml  entrypoint.sh  improvements.txt  install.sh  jupyter_client.py  kernel_fixes.txt  kernel_manager.py  main.py  package-lock.json  parity.md  pyproject.toml  pytest.ini  requirements.txt  server.py  setup.py  streaming_plan.txt  utils.py
.github/workflows/: docker-build.yml
api/: __init__.py  rest_server.py
api/schemas/: __init__.py  execution.py
cloud/: __init__.py
coderunner/: __init__.py  cli.py  client.py
core/: __init__.py  exceptions.py  kernel_pool.py  language_processor.py  session_manager.py
playw/: chrome.js  package-lock.json  package.json  play.Dockerfile  test.py
scripts/litebox/: build_rootfs.sh  entrypoint.sh
tests/: __init__.py  conftest.py  test_client.py  test_coderunner_client.py  test_config.py  test_container_manager.py  test_isolated_containers.py  test_jupyter_client.py  test_kernel_manager.py  test_language_processor.py  test_parsing.py
